[package]
name = "xlkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
failure = "0.1.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_repr = "0.1.9"
bincode = "1.3.3"

[[bin]]
name = "xdb"
path = "src/bin/xdb.rs"